# pygmst

./: ._.editorconfig  .coveralls.yml  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.rst  GeneMark_hmm.mod  MANIFEST.in  README.rst  final_model.mod  initial.meta.lst.feature  itr_0.lst  itr_1.lst  itr_1.mod  itr_2.lst  itr_2.mod  itr_3.lst  not-a-pyproject.toml  not_a_pyproject.toml  pygmst_experiments.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
pygmst/: __init__.py  gmst.pl  gmst.py  logger.py  pygmst.py  test.py  version.py
pygmst/genemark/: gmst.pl
pygmst/testfiles/: cluster_answers.json  decoding_gmst.pl.ipynb  itr_0.lst  itr_1.lst  itr_1.mod  itr_2.lst  pygmst_experiments.ipynb  test.fa.fai  test.pl  test.py
pygmst/tests/: actual.lst  cluster_answers.json  gmst_test  test_cluster.mod  test_cluster.py  test_combineModel.py  test_model_2.mod  test_train.py
src/pygmst/: .___about__.py  __about__.py  __init__.py  logging.py  pygmst.py
src/pygmst/genemark/: GeneMark_hmm.mod
testfiles/: decoding_gmst.pl.ipynb
tests/: actual.lst  combineModel.pl  gmst_test.faa  test_cluster.py  test_combineModel.py  test_combineModels.py  test_gmst.py  test_train.py  test_version.py
