[build-system]
requires = ["setuptools>=42", "wheel"]
# [build-system]
# requires = ["poetry_core"]
# build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37', 'py38']
skip-string-normalization = true

[tool.poetry]
name = "pygmst"
version = "0.4.17"
description = "Python translation of GeneMarks S-T"
authors = ["Miles Smith <mileschristiansmith@gmail.com>"]
license = "MPL-2.0"
readme = "README.rst"
repository = "https://github.com/milescsmith/pygmst"
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Environment :: Console",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: BSD License",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Operating System :: POSIX :: Linux",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
    ]

[tool.poetry.scripts]
pygmst = "pygmst.pygmst:gmst"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
click-option-group = "^0.5.1"
pyfaidx = "^0.5.8"
sortedcontainers = "^2.2.2"
biopython = "^1.77"
pre-commit = "^2.5.1"
tox = "^3.15.2"
pytest = "^5.4.3"
pytest-cov = "^2.10.0"
coveralls = "^2.0.0"
versioneer = "^0.18"
setuptools-scm  = "^4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4"
