[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pygmst"
version = "0.5.3"
description = "Python translation of GeneMarks S-T"
authors = ["Miles Smith <mileschristiansmith@gmail.com>"]
license = "MPL-2.0"
readme = "README.rst"
repository = "https://github.com/milescsmith/pygmst"
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Environment :: Console",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: BSD License",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Operating System :: POSIX :: Linux",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
    ]
include = ["pygmst/genemark/*.*"]

[tool.poetry.scripts]
pygmst = "pygmst.pygmst:app"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
click-option-group = "^0.5.1"
pyfaidx = "^0.5.8"
sortedcontainers = "^2.2.2"
biopython = "^1.77"
typer = "^0.3.2"
coloredlogs = "^15.0"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
coveralls = "^2.0.0"
pre-commit = "^2.5.1"
pytest = "^5.4"
pytest-cov = "^2.10.0"
setuptools-scm  = "^4.1"
tox = "^3.15.2"
versioneer = "^0.18"

[tool.flakehell.plugins]
"*" = ["-C0103", "-C0116", "-C901", "-E203", "-E401", "-E501", "-E266", "-F401", "-F403", "-R0913", "-R0914", "-W503", "-W1203", "-W1309", "-C0301", "-R0912"]
flake8-bandit = ["+*"]
flake8-bugbear = ["-B950"]
pylint = ["+*"]
# wemake-python-styleguide = ["+*", "-WPS305", "-WPS221", "-WPS111", "-WPS231", "-WPS326", "-WPS337", "-WPS336", "-WPS528", "-WPS529"]
flake8-broken-line = ["+*"]
flake8-commas = ["+*"]
flake8-comprehensions = ["+*"]
flake8-darglint = ["+*", "-DAR101"]
flake8-debugger = ["+*"]
# flake8-docstrings = ["+*"]
flake8-eradicate = ["+*"]
flake8-isort = ["+*"]
flake8-rst-docstrings = ["+*"]
flake8-string-format = ["+*"]
# mccabe = ["+*"]
# pep8-naming = ["+*"]
pycodestyle = ["+*"]
pyflakes = ["+*"]

# match by prefix
[tool.flakehell.exceptions."tests/"]
pycodestyle = ["-*"]     # disable a check
pyflakes = ["-*"]           # disable a plugin

[tool.flakehell.exceptions."tests/test_example.py"]
pyflakes = ["+*"]           # enable a plugin

# match by glob
[tool.flakehell.exceptions."**/test_*.py"]
pyflakes = ["-*"]

[tool.black]
line-length = 88
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
